# FinSight-AI-Powered-POS-Intelligence-Platform

./: .gitignore  README.md  bridge.py  config.py  dbclient.py  fastmcp.json  main.py  mcp.config.json  orderSchema.py  pyproject.toml  server.py
.claude/: settings.json
