[project]
name = "finsight-ai-powered-pos-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "fastmcp>=3.2.0",
    "ollama-mcp-bridge>=0.6.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
